# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  fuckme.txt  get_next_line.c  get_next_line.h  main.c  size_file.txt  task_runner  test2  testmain.c
ft_printf/: apply_flags.c  apply_flags2.c  apply_format.c  ft_conncat.c  ft_format_c.c  ft_format_d.c  ft_format_o.c  ft_format_p.c  ft_format_percent.c  ft_format_s.c  ft_format_u.c  ft_format_x.c  ft_printf.c  ft_printf.h  get_func_dict.c  get_modificator.c  get_next_format.c  get_right_format.c  modify_flags.c  parce_modifiers.c  parse_modifiers.c  proccess_format.c  validate_input.c
libftprintf/: CMakeLists.txt  Makefile  README.md  author  ft_atoi.c  ft_bzero.c  ft_dict_add.c  ft_dict_create.c  ft_dict_get.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+30 more)
